# india-forecast-app

./: .all-contributorsrc  .bumpversion.cfg  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docker-build.yml
india_forecast_app/: __init__.py  adjuster.py  app.py  model.py  sentry.py
india_forecast_app/data/: generation.py  nwp.py  satellite.py
india_forecast_app/data/mo_global/: india_coords.nc
india_forecast_app/models/: __init__.py  all_models.yaml  dummy.py  pydantic_models.py
india_forecast_app/models/pvnet/: consts.py  model.py  utils.py
india_forecast_app/save/: __init__.py  data_platform.py  database.py  save.py  utils.py
nwp.zarr/: .zmetadata
nwp.zarr/ecmwf/: .zarray  0.0.0.0.2  0.0.0.1.2  0.0.0.2.0  0.0.0.2.1  0.0.0.2.2
nwp.zarr/init_time/: 0
nwp.zarr/step/: .zarray
scripts/: seed_local_db.py
tests/: __init__.py  _utils.py  conftest.py  test_adjuster.py  test_app.py  test_save.py  test_save_data_platform.py  test_save_database.py  test_save_utils.py
tests/data/: test_generation.py  test_nwp.py  test_read_from_data_platform.py
tests/models/: test_pydantic_models.py
tests/models/pvnet/: test_utils.py
tests/save/: __init__.py  test_save.py  test_save_data_platform.py  test_save_database.py  test_save_utils.py
tests/test_data/: inspect.py  inspect_data.ipynb
tests/test_data/nwp-no-data.zarr/: .zmetadata
tests/test_data/nwp-no-data.zarr/init_time/: 0
tests/test_data/nwp-no-data_gfs.zarr/: .zmetadata
tests/test_data/nwp-no-data_gfs.zarr/init_time_utc/: .zattrs  0
tests/test_data/nwp-no-data_gfs.zarr/latitude/: .zarray
tests/test_data/nwp-no-data_gfs.zarr/step/: .zarray  1
tests/test_data/nwp-no-data_gfs.zarr/variable/: .zarray  0
tests/test_data/nwp.zarr/: .zmetadata
tests/test_data/nwp.zarr/init_time/: 0
tests/test_data/nwp.zarr/step/: 0
tests/test_data/nwp.zarr/variable/: 0
tests/test_data/nwp_india.zarr/: .zmetadata
tests/test_data/wind/: wind_data.nc  wind_metadata.csv
