[tool.poetry]
name = "india_forecast_app"
version = "0.1.0"
description = "Runs wind and PV forecasts for India and saves to database"
authors = ["Chris Briggs <confusedmatrix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pvsite-datamodel = "^1.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.11"
testcontainers = "^3.7.1"

[tool.poetry.scripts]
app = "india_forecast_app.app:app"
seeder = "scripts.seed_local_db:seed_db"

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]

[build-system]
requires = ["poetry-core==1.7.1"]
build-backend = "poetry.core.masonry.api"
